Add ability to print heavy borders in Grid Use Gradle wrapper Add puzzles from recent issues